--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/passport-local-mongoose": "^6.1.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "i": "^0.3.7",
